# upheno-cross-species-ingest

./: .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml  upheno_cross_species_ingest
.github/workflows/: create-release.yaml  deploy-docs.yaml  test.yaml  update-docs.yaml
docs/: 404.html  edges_report.tsv  index.html  index.md  nodes_report.tsv  objects.inv  sitemap.xml
docs/search/: search_index.json
scripts/: generate-rdf.py  generate-report.py  get-latest-report.py
src/upheno_cross_species_ingest/: __init__.py  cli.py  download.yaml  metadata.yaml  transform.py  transform.yaml  transform_filtered.py  transform_filtered.yaml  upheno_cross_species.py
tests/: test_example.py
