[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "bridge"
dynamic = ["version"]
description = "UPheno Cross Species Ingest Modular Ingest."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "biolink-model", # need to pull 'master' for now, until dust settles on ingest-related model revisions
    "bmt", # need to pull 'master' for now, until a fresh release past 1.4.6
    "click>=8.0.0",
    "deepdiff>=8.6.1",
    "hatchling",
    "kghub-downloader>=0.4.2",
    "koza",
    #"koza==0.6.1",
    "mkdocs-minify-plugin>=0.8.0",
    "robokop-orion==0.1.10",
    "uv-dynamic-versioning>=0.11.2",
]

[project.scripts]
ingest = "upheno_cross_species_ingest.cli:app"


[dependency-groups]
dev = [
    "importlib_metadata",
    "pytest>=8.4.1",
    "black>=24.1.0",
    "codespell>=2.2.0",
    "ruff>=0.12.8",
    "pandas", # also installs numpy
    "requests",
    # for CX notebook support: I use an old version that works with extensions
    "nbclassic",
    "jupyter_contrib_nbextensions",
    "jsonlines",
    "resource-ingest-guide-schema",
    # Documentation dependencies
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "biolink-model>=4.3.5.post29.dev0",
    "mkdocs-material>=9.5",
    "mkdocs-macros-plugin",
    "mkdocstrings[python]",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["*.ipynb"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.uv]
package = true

[tool.uv.sources]
koza = { git = "https://github.com/monarch-initiative/koza.git", rev = "translator-ingests" }
biolink-model = { git = "https://github.com/biolink/biolink-model.git", rev = "master" }
bmt = { git = "https://github.com/biolink/biolink-model-toolkit.git", rev = "master" }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/upheno_cross_species_ingest"]
